Fix 41 bugs: compile errors, game-breaking logic, security, threading, and UI